src/monero_api.h


    typedef struct ErrorBox
    {
        int code;
        const char *message;
    } ErrorBox;


    typedef struct ExternPendingTransactionRaw
    {
        int64_t amount;
        int64_t fee;
        const char *hex;
        const char *hash;
        const char *tx_key;
        const char *multisig_sign_data;
        int64_t monero_transaction_handle;
    } ExternPendingTransactionRaw;

    void subaddress_refresh(uint32_t account_index, ErrorBox *error);


    // **********************************************************************************************************************************
    // Transaction
    // **********************************************************************************************************************************

    void transactions_refresh(ErrorBox *error);


    int64_t *transactions_get_all(ErrorBox *error);

    int64_t transactions_count(ErrorBox *error);

    void free_block_of_transactions(int64_t *handles, int32_t size);


    const char *get_tx_key(const char *tx_id, ErrorBox *error);


    void transaction_create(const char *address, const char *payment_id, const char *amount, uint8_t priority_raw, uint32_t subaddr_account, ExternPendingTransactionRaw *pending_transaction, ErrorBox *error);

    void transaction_create_mult_dest(const char **addresses, const char *payment_id, const char **amounts, uint32_t size, uint8_t priority, uint32_t subaddr_account, ExternPendingTransactionRaw *pending_transaction, ErrorBox *error);

    void transaction_commit(ExternPendingTransactionRaw *transaction, ErrorBox *error);


    void freeze(const char *key_image, ErrorBox *error);

    void thaw(const char *key_image, ErrorBox *error);

    bool frozen(const char *key_image, ErrorBox *error);


    // **********************************************************************************************************************************
    // Multisig
    // **********************************************************************************************************************************

    bool is_multisig(ErrorBox *error);

    const char *prepare_multisig(ErrorBox *error);

    const char *get_multisig_info(ErrorBox *error);

    const char *exchange_multisig_keys(const char *const *info, uint32_t size, ErrorBox *error);

    bool is_multisig_import_needed(ErrorBox *error);

    uint32_t import_multisig_images(const char *const *info, uint32_t size, ErrorBox *error);

    void export_multisig_images(const char **info, ErrorBox *error);

    const char *make_multisig(const char *const *info, uint32_t size, uint32_t threshold, ErrorBox *error);

    const char *sign_multisig_tx_hex(const char *multisig_tx_hex, ErrorBox *error);