lib/monero_api_bindings_generated.dart


  late final _subaddress_refreshPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Uint32, ffi.Pointer<ErrorBox>)>>('subaddress_refresh');
  late final _subaddress_refresh = _subaddress_refreshPtr
      .asFunction<void Function(int, ffi.Pointer<ErrorBox>)>();

  /// **********************************************************************************************************************************
  /// Transaction
  /// **********************************************************************************************************************************
  void transactions_refresh(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _transactions_refresh(
      error,
    );
  }

  late final _transactions_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'transactions_refresh');
  late final _transactions_refresh = _transactions_refreshPtr
      .asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Int64> transactions_get_all(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _transactions_get_all(
      error,
    );
  }

  late final _transactions_get_allPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int64> Function(
              ffi.Pointer<ErrorBox>)>>('transactions_get_all');
  late final _transactions_get_all = _transactions_get_allPtr
      .asFunction<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<ErrorBox>)>();

  int transactions_count(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _transactions_count(
      error,
    );
  }

  late final _transactions_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ErrorBox>)>>(
          'transactions_count');
  late final _transactions_count =
      _transactions_countPtr.asFunction<int Function(ffi.Pointer<ErrorBox>)>();

  void free_block_of_transactions(
    ffi.Pointer<ffi.Int64> handles,
    int size,
  ) {
    return _free_block_of_transactions(
      handles,
      size,
    );
  }

  late final _free_block_of_transactionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int64>,
              ffi.Int32)>>('free_block_of_transactions');
  late final _free_block_of_transactions = _free_block_of_transactionsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Int64>, int)>();

  ffi.Pointer<ffi.Char> get_tx_key(
    ffi.Pointer<ffi.Char> tx_id,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_tx_key(
      tx_id,
      error,
    );
  }

  late final _get_tx_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>>('get_tx_key');
  late final _get_tx_key = _get_tx_keyPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  void transaction_create(
    ffi.Pointer<ffi.Char> address,
    ffi.Pointer<ffi.Char> payment_id,
    ffi.Pointer<ffi.Char> amount,
    int priority_raw,
    int subaddr_account,
    ffi.Pointer<ExternPendingTransactionRaw> pending_transaction,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _transaction_create(
      address,
      payment_id,
      amount,
      priority_raw,
      subaddr_account,
      pending_transaction,
      error,
    );
  }

  late final _transaction_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint8,
              ffi.Uint32,
              ffi.Pointer<ExternPendingTransactionRaw>,
              ffi.Pointer<ErrorBox>)>>('transaction_create');
  late final _transaction_create = _transaction_createPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ExternPendingTransactionRaw>,
          ffi.Pointer<ErrorBox>)>();

  void transaction_create_mult_dest(
    ffi.Pointer<ffi.Pointer<ffi.Char>> addresses,
    ffi.Pointer<ffi.Char> payment_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> amounts,
    int size,
    int priority,
    int subaddr_account,
    ffi.Pointer<ExternPendingTransactionRaw> pending_transaction,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _transaction_create_mult_dest(
      addresses,
      payment_id,
      amounts,
      size,
      priority,
      subaddr_account,
      pending_transaction,
      error,
    );
  }

  late final _transaction_create_mult_destPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32,
              ffi.Uint8,
              ffi.Uint32,
              ffi.Pointer<ExternPendingTransactionRaw>,
              ffi.Pointer<ErrorBox>)>>('transaction_create_mult_dest');
  late final _transaction_create_mult_dest =
      _transaction_create_mult_destPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              int,
              int,
              ffi.Pointer<ExternPendingTransactionRaw>,
              ffi.Pointer<ErrorBox>)>();

  void transaction_commit(
    ffi.Pointer<ExternPendingTransactionRaw> transaction,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _transaction_commit(
      transaction,
      error,
    );
  }

  late final _transaction_commitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ExternPendingTransactionRaw>,
              ffi.Pointer<ErrorBox>)>>('transaction_commit');
  late final _transaction_commit = _transaction_commitPtr.asFunction<
      void Function(
          ffi.Pointer<ExternPendingTransactionRaw>, ffi.Pointer<ErrorBox>)>();

  void freeze(
    ffi.Pointer<ffi.Char> key_image,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _freeze(
      key_image,
      error,
    );
  }

  late final _freezePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>>('freeze');
  late final _freeze = _freezePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  void thaw(
    ffi.Pointer<ffi.Char> key_image,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _thaw(
      key_image,
      error,
    );
  }

  late final _thawPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>>('thaw');
  late final _thaw = _thawPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  bool frozen(
    ffi.Pointer<ffi.Char> key_image,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _frozen(
      key_image,
      error,
    );
  }

  late final _frozenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>>('frozen');
  late final _frozen = _frozenPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  /// **********************************************************************************************************************************
  /// Multisig
  /// **********************************************************************************************************************************
  bool is_multisig(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _is_multisig(
      error,
    );
  }

  late final _is_multisigPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ErrorBox>)>>(
          'is_multisig');
  late final _is_multisig =
      _is_multisigPtr.asFunction<bool Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> prepare_multisig(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _prepare_multisig(
      error,
    );
  }

  late final _prepare_multisigPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('prepare_multisig');
  late final _prepare_multisig = _prepare_multisigPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> get_multisig_info(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_multisig_info(
      error,
    );
  }

  late final _get_multisig_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('get_multisig_info');
  late final _get_multisig_info = _get_multisig_infoPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> exchange_multisig_keys(
    ffi.Pointer<ffi.Pointer<ffi.Char>> info,
    int size,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _exchange_multisig_keys(
      info,
      size,
      error,
    );
  }

  late final _exchange_multisig_keysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32, ffi.Pointer<ErrorBox>)>>('exchange_multisig_keys');
  late final _exchange_multisig_keys = _exchange_multisig_keysPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>, int, ffi.Pointer<ErrorBox>)>();

  bool is_multisig_import_needed(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _is_multisig_import_needed(
      error,
    );
  }

  late final _is_multisig_import_neededPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ErrorBox>)>>(
          'is_multisig_import_needed');
  late final _is_multisig_import_needed = _is_multisig_import_neededPtr
      .asFunction<bool Function(ffi.Pointer<ErrorBox>)>();

  int import_multisig_images(
    ffi.Pointer<ffi.Pointer<ffi.Char>> info,
    int size,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _import_multisig_images(
      info,
      size,
      error,
    );
  }

  late final _import_multisig_imagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Uint32,
              ffi.Pointer<ErrorBox>)>>('import_multisig_images');
  late final _import_multisig_images = _import_multisig_imagesPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>, int, ffi.Pointer<ErrorBox>)>();

  void export_multisig_images(
    ffi.Pointer<ffi.Pointer<ffi.Char>> info,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _export_multisig_images(
      info,
      error,
    );
  }

  late final _export_multisig_imagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ErrorBox>)>>('export_multisig_images');
  late final _export_multisig_images = _export_multisig_imagesPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> make_multisig(
    ffi.Pointer<ffi.Pointer<ffi.Char>> info,
    int size,
    int threshold,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _make_multisig(
      info,
      size,
      threshold,
      error,
    );
  }

  late final _make_multisigPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32, ffi.Uint32, ffi.Pointer<ErrorBox>)>>('make_multisig');
  late final _make_multisig = _make_multisigPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int,
          int, ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> sign_multisig_tx_hex(
    ffi.Pointer<ffi.Char> multisig_tx_hex,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _sign_multisig_tx_hex(
      multisig_tx_hex,
      error,
    );
  }
